# Open-source-background-wall-

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
assets/images/: .gitkeep
docs/: CROSS_PLATFORM_BUILD.md  MULTI_PLATFORM_BUILD.md  development.md  features_summary.md  implementation_summary.md  project_summary.md  quickstart.md  testing_guide.md
ios/: Podfile
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Flutter/ephemeral/: flutter_native_integration.env
ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  Info.plist
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/services/: auth_service.dart  auto_change_service.dart  collections_service.dart  dio_client.dart  download_service.dart  downloads_service.dart  favorites_service.dart  router.dart  search_history_service.dart  share_service.dart  theme_service.dart  wallpaper_service.dart
lib/data/models/: wallpaper.dart
lib/data/providers/: auth_provider.dart  wallpaper_provider.dart
lib/data/repositories/: pexels_api.dart  unsplash_api.dart  wallpaper_classifier.dart
lib/presentation/pages/: collections_page.dart  disclaimer_page.dart  downloads_page.dart  favorites_page.dart  home_page.dart  login_page.dart  search_page.dart  settings_page.dart  trending_page.dart  user_agreement_page.dart  wallpaper_detail_page.dart
lib/presentation/theme/: app_theme.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
test/unit/models/: wallpaper_test.dart
test/widget/: responsive_grid_test.dart  wallpaper_card_test.dart
web/: index.html  manifest.json  service-worker.js
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake  windows.cpp
windows/runner/: WallpaperService.cs  main.cpp
(+12 files in other folders)
